<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/character_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="140dp"
        android:maxHeight="170dp"
        android:minWidth="100dp"
        android:minHeight="140dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/input_name"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:hint="@string/hint_name"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/character_img"
        app:layout_constraintRight_toLeftOf="@id/lvl_player"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lvl_player"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/shield_icon_lvl"
        android:gravity="center"
        android:text="@string/start_lvl_player"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintLeft_toRightOf="@id/input_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_left_character"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/spase"
        app:layout_constraintTop_toBottomOf="@id/character_img"
        tools:src="@android:drawable/ic_media_rew" />

    <Space
        android:id="@+id/spase"
        android:layout_width="25dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toRightOf="@id/btn_left_character"
        app:layout_constraintRight_toLeftOf="@id/btn_right_character"
        app:layout_constraintTop_toBottomOf="@id/character_img" />

    <ImageButton
        android:id="@+id/btn_right_character"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="5dp"
        app:layout_constraintLeft_toRightOf="@id/spase"
        app:layout_constraintTop_toBottomOf="@id/character_img"
        tools:src="@android:drawable/ic_media_ff" />

    <LinearLayout
        android:id="@+id/attribute_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="240dp"
        android:minHeight="400dp"
        android:orientation="vertical"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@id/input_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_right_character"
        android:gravity="center">

        <include
            android:id="@+id/stretch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/panel_strength"
            />

        <include
            android:id="@+id/health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/panel_health"/>

        <include
            android:id="@+id/defense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/panel_defense"/>

        <include
            android:id="@+id/gold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/panel_gold"/>

    </LinearLayout>

    <TextView
        android:id="@+id/points_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/go_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.721"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/attribute_list"
        app:layout_constraintVertical_bias="0.23" />

    <Button
        android:id="@+id/go_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_start_btn"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>